@@ -9,6 +9,10 @@ Improvements
 ------------
 - cache: handle out-of-space SIGBUS slightly better (#197)
 
+Bugfixes
+--------
+- cache.clear('name'): fix some edge cases in API (#401)
+
 
 Knot Resolver 3.0.0 (2018-08-20)
 ================================
